# nexus-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PATCH_MANIFEST.json  README.md  README_NEXUS_ARENA.md  apply_patch.ps1
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: lib.rs
crates/engine-client/: Cargo.toml
crates/engine-client/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/src/: components.rs  lib.rs
crates/engine-network/: Cargo.toml
crates/engine-network/src/: lib.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: body.rs  conversion.rs  lib.rs  world.rs
crates/engine-render/: Cargo.toml
crates/engine-render/src/: camera.rs  depth.rs  lib.rs  mesh.rs  renderer.rs  shader.wgsl
crates/engine-server/: Cargo.toml
crates/engine-server/src/: lib.rs
games/sandbox-client/: Cargo.toml
games/sandbox-client/src/: app.rs  args.rs  assets.rs  client.rs  components.rs  connection.rs  input.rs  main.rs  network.rs  render_scene.rs  replication.rs
games/sandbox-dedicated-server/: Cargo.toml
games/sandbox-dedicated-server/src/: main.rs
games/sandbox-multi-client/: Cargo.toml
games/sandbox-multi-client/src/: main.rs
games/sandbox-server/: Cargo.toml
games/sandbox-server/src/: components.rs  config.rs  dedicated.rs  game.rs  integrated.rs  lib.rs  resources.rs  snapshot.rs
games/sandbox-server/src/systems/: arena.rs  input.rs  lifecycle.rs  messages.rs  mod.rs  movement.rs  replication.rs  tick.rs
games/sandbox-shared/: Cargo.toml
games/sandbox-shared/src/: lib.rs
src/: app.rs  camera.rs  debug_gui.rs  depth.rs  ecs_scene.rs  frustum.rs  game.rs  input.rs  main.rs  mesh.rs  physics.rs  renderer.rs  shader.wgsl
src/voxel/: block.rs  chunk.rs  generator.rs  mesh.rs  mesher.rs  mod.rs  raycast.rs  world.rs
