[workspace]
resolver = "3"
members = [
    "crates/engine-core",
    "crates/engine-network",
    "crates/engine-client",
    "crates/engine-server",
    "crates/engine-render",
    "crates/engine-ecs",

    "games/sandbox-shared",
    "games/sandbox-server",
    "games/sandbox-client"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
bevy_ecs = "0.19"
winit="0.30"
wgpu="29"
pollster="0.4"
thiserror="2"

bytemuck={
    version="1.25",
    features=["derive"]
}

glam = {
    version = "0.33",
    features = ["serde", "bytemuck"]
}
serde = {
    version = "1",
    features = ["derive"]
}

engine-core = { path = "crates/engine-core" }
engine-ecs = { path = "crates/engine-ecs" }
engine-network = { path = "crates/engine-network" }
engine-render = { path = "crates/engine-render" }
engine-client = { path = "crates/engine-client" }
engine-server = { path = "crates/engine-server" }

sandbox-shared = { path = "games/sandbox-shared" }
sandbox-server = { path = "games/sandbox-server" }

