[package]
name = "sandbox-client"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
engine-client.workspace = true
engine-network.workspace = true
engine-ecs.workspace = true
bevy_ecs.workspace = true

sandbox-shared.workspace = true
sandbox-server.workspace = true
