[package]
name = "sandbox-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine-assets.workspace = true
engine-client.workspace = true
engine-core.workspace = true
engine-ecs.workspace = true
engine-network.workspace = true
engine-render.workspace = true
sandbox-shared.workspace = true
sandbox-server.workspace = true
bevy_ecs.workspace = true
glam.workspace = true
winit.workspace = true
