[package]
name = "sandbox-multi-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine-client.workspace = true
engine-core.workspace = true
engine-network.workspace = true
sandbox-shared.workspace = true
sandbox-server.workspace = true
