[package]
name = "sandbox-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core.workspace = true
engine-ecs.workspace = true
engine-network.workspace = true
engine-physics.workspace = true
engine-server.workspace = true
sandbox-shared.workspace = true
bevy_ecs.workspace = true
glam.workspace = true
